# ctrl-space-wsl

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  run.sh
src/: app_discovery.rs  backend_sdl2.rs  backend_x11.rs  config.rs  filter.rs  frequency.rs  launcher.rs  lock.rs  main.rs  ui.rs
