[package]
name = "ctrl-space-wsl"
version = "0.2.0"
edition = "2021"

[dependencies]
egui = "0.33"
egui_sdl2_gl = { version = "0.33", default-features = false, features = ["sdl2_use-pkgconfig"] }
sdl2 = { version = "0.37", features = ["use-pkgconfig", "raw-window-handle"] }
fuzzy-matcher = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5"
x11 = { version = "2.21", features = ["xlib"] }
raw-window-handle = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
