[package]
name = "ctrl-space-wsl"
version = "0.3.0"
edition = "2021"
authors = ["Fares Rihani"]
description = "A fast application launcher for WSL2, inspired by dmenu/yeganesh"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frihani/ctrl-space-wsl"
homepage = "https://github.com/frihani/ctrl-space-wsl"
readme = "README.md"
keywords = ["launcher", "wsl", "dmenu", "fuzzy", "linux"]
categories = ["command-line-utilities"]

[dependencies]
fuzzy-matcher = "0.3"
toml = "1.0"
serde = { version = "1", features = ["derive"] }
dirs = "6"
libc = "0.2"

x11rb = { version = "0.13", features = ["allow-unsafe-code", "shm", "randr"] }
fontdue = "0.9"

[[bin]]
name = "ctrl-space-wsl"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
